# sparsegpt

./: .gitignore  bloom.py  datautils.py  environment.yml  llama.py  opt.py  pyproject.toml  quant.py  sparsegpt.py
